--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -27,3 +27,6 @@ osc=yes
 ## youtube-dl
 --ytdl
 00ytdl-format=mp4
+--ytdl-format=bestvideo+bestaudio/best
+# --ytdl-raw-options=proxy=%23%socks5://127.0.0.1:1080
+--ytdl-raw-options=youtube-skip-dash-manifest=
