--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -18,8 +18,12 @@
 border = no
 
 ## don't allow a new window to have a size larger than 90% of screen
-autofit-larger=90%x90%
-
+--autofit-larger=90%x90%
+--autofit=1440x900
+##--autofit=1920x1080
+--geomtry=1920x1080
+# --hidpi-window-scale=yes
+--window-scale=1.0
 ## disable the onscreen controller (osc)
 osc=yes
 
