--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -21,16 +21,15 @@ border = no
 --autofit-larger=90%x90%
 --autofit=1440x900
 ##--autofit=1920x1080
---geomtry=1920x1080
+# --geomtry=1920x1080
 # --hidpi-window-scale=yes
 --window-scale=1.0
 ## disable the onscreen controller (osc)
 osc=yes
 
-
 ## youtube-dl
 --ytdl
-00ytdl-format=mp4
+--ytdl-format=mp4
 --ytdl-format=bestvideo+bestaudio/best
 # --ytdl-raw-options=proxy=%23%socks5://127.0.0.1:1080
 --ytdl-raw-options=youtube-skip-dash-manifest=
