--- a/conky/conky.desktop
+++ b/conky/conky.desktop
@@ -7,7 +7,7 @@ Comment[zu]=Thola usizo nge GNOME
 Keywords=documentation;information;manual;help;
 Keywords[zh_CN]=documentation;information;manual;help;文档;信息;手册;帮助;
 OnlyShowIn=GNOME;Unity;
-Exec=/home/amito/usr/bin/conky.sh > /home/amito/.dotfiles/conky/conky.log
+Exec=/home/amito/usr/bin/conky.sh
 Icon=help-browser
 StartupNotify=true
 Terminal=false
