--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,8 +1,8 @@
 # vim: syntax=config
 
 --ontop
--vo wayland
-# --opengl-backend=wayland
+# --vo=wayland
+#--opengl-backend=wayland
 
 ############## video settings #############
 
@@ -19,16 +19,16 @@
 border = no
 
 ## don't allow a new window to have a size larger than 90% of screen
+# autofit=1440x900
+# geometry=1920x1080
 autofit-larger=90%x90%
-autofit=1440x900
-geomtry=1920x1080
-# --hidpi-window-scale=yes
-window-scale=1.0
+# hidpi-window-scale=yes
+# window-scale=1.0
 ## disable the onscreen controller (osc)
 osc=yes
 
 ## youtube-dl
---ytdl
+ytdl
 ytdl-format=mp4
 --ytdl-format=bestvideo+bestaudio/best
 # --ytdl-raw-options=proxy=%23%socks5://127.0.0.1:1080
