--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -27,6 +27,10 @@ autofit-larger=90%x90%
 ## disable the onscreen controller (osc)
 osc=yes
 
+###############
+hwdec=auto
+gpu-context=wayland
+
 ## youtube-dl
 ytdl
 ytdl-format=mp4
