--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -19,9 +19,9 @@
 border = no
 
 ## don't allow a new window to have a size larger than 90% of screen
-# autofit=1440x900
+autofit=1280x800
 # geometry=1920x1080
-autofit-larger=90%x90%
+# autofit-larger=90%x90%
 # hidpi-window-scale=yes
 # window-scale=1.0
 ## disable the onscreen controller (osc)
