--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -29,11 +29,11 @@ osc=yes
 
 ###############
 hwdec=auto
-gpu-context=wayland
+# gpu-context=wayland
 
 ## youtube-dl
 ytdl
 ytdl-format=mp4
---ytdl-format=bestvideo+bestaudio/best
-# --ytdl-raw-options=proxy=%23%socks5://127.0.0.1:1080
---ytdl-raw-options=youtube-skip-dash-manifest=
+ytdl-format=bestvideo+bestaudio/best
+#ytdl-raw-options=proxy=%23%socks5://127.0.0.1:1080
+ytdl-raw-options=youtube-skip-dash-manifest=
