--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -26,6 +26,7 @@ autofit=1280x800
 # window-scale=1.0
 ## disable the onscreen controller (osc)
 osc=yes
+osd-level=1
 
 ###############
 hwdec=auto
