--- a/grub2/grub.cfg
+++ b/grub2/grub.cfg
@@ -20,7 +20,8 @@
 
 set uuid1=F62E-2FA6
 set uuid2=F696-B30B
-search --no-floppy --fs-uuid --set root $uuid2
+set uuid3=F696-B30B
+#search --no-floppy --fs-uuid --set root $uuid2
 #set root=(hd0,gpt1)
 set default=1
 set timeout=10
@@ -127,7 +128,7 @@ submenu "openSUSE >>>"{
 		echo booting...
 	}
 	### openSUSE GNOME ###
-	menuentry "openSUSE GNOME liveCD" {
+	menuentry "openSUSE GNOME LiveCD" {
 		GRUB_DISTRIBUTOR=opensuse
 		set gfxpayload=keep
 		#set root=(hd0,gpt1)
@@ -216,12 +217,12 @@ menuentry "slax" {
 ### CentOS ###
 submenu "CentOS --->>> "{
 ### Centos DVD ###
-	menuentry "CentOS DVD on (hd1,gpt4)"{
+	menuentry "CentOS DVD"{
 		GRUB_DISTRIBUTOR=fedora
 		set root=(hd1,gpt4)
 		insmod ext2
 		set isofile='/boot/centos-dvd.iso'
-		loopback loop (hd1,gpt4)$isofile
+		loopback loop $isofile
 		set gfxpayload=keep
 		echo Loading linux...
 		linux (loop)/images/preboot/vmlinuz inst.stage2=hd:/dev/sda4:/$isofile
@@ -230,16 +231,25 @@ submenu "CentOS --->>> "{
 ### CentOS LiveCD ###
 	menuentry "CentOS-Live-Gnome-x86_64"{
 		GRUB_DISTRIBUTOR=fedora
-		#set root='(hd0,gpt1)'
-		search --no-floppy --fs-uuid --set=root $uuid1		
+		set root='(hd0,gpt1)'
+		#search --no-floppy --fs-uuid --set=root $uuid1
 		set isofile='/boot/centos.iso'
 		loopback loop $isofile
-		sset gfxpayload=keep
+		set gfxpayload=keep
 		echo Loading linux...
 		linuxefi (loop)/isolinux/vmlinuz0 root=live:CDLABEL=CentOS-7-Live-GNOME-x86_64 iso-scan/filename=$isofile  ro rd.live.image quiet rhgb rd.live.check
 		echo Loading initial ramdisk ...
 		initrdefi (loop)/isolinux/initrd0.img
 		echo booting...
+	}
+	menuentry "CentOS DVD Auto"{
+		GRUB_DISTRIBUTOR=fedora
+		set root='(hd0,gpt1)'
+		## IP Format: ip::gateway:netmask:hostname:interface:none
+		## ks: kickstart config file
+		kernel16 /boot/centos/vmlinuz ro ip=192.168.1.10::192.168.1.1:255.255.255.254:my_hostname:eth0:none nameserver=1.1.1.1 inst.repo=http://mirrors.ustc.edu.cn/centos/7/os/x86_64/ inst.vnc inst.vncpassword=MyPassword ksdevice=eth0 ks=/boot/centos/ks.cfg inst.lang=en_US inst.keymap=us
+		#kernel16 /boot/centos/vmlinuz ro ip=192.168.1.10::192.168.1.1:255.255.255.254:my_hostname:eth0:none nameserver=1.1.1.1 inst.repo=http://mirrors.ustc.edu.cn/centos/7/os/x86_64/ inst.vnc inst.vncpassword=MyPassword ksdevice=eth0 ks="http://where.my.ks.file.is" inst.lang=en_US inst.keymap=us
+		initrd16 /boot/centos/initrd.img
 	}
 }
 ### Scientific Linux ###
