--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,9 +36,9 @@ set -g visual-activity on
 
 #Windows
 unbind '"'
-bind - split-window -v -c "#{pane_current_path}"
+bind = split-window -v -c "#{pane_current_path}"
 unbind %
-bind = split-window -h -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 bind k selectp -U
