--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,18 +13,18 @@ set-option -g history-limit 10000
 bind r source-file ~/.tmux.conf
 set -g default-terminal "screen-256color"
 # set -g status-utf8 on
-set -g pane-border-fg green
-set -g pane-active-border-fg white
-set -g message-fg white
-set -g message-attr bright
+#set -g pane-border-fg green
+#set -g pane-active-border-fg white
+#set -g message-fg white
+#set -g message-attr bright
 set -g status-fg white
 set -g status-bg black
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-setw -g window-status-current-fg cyan
-setw -g window-status-current-bg default
-setw -g window-status-current-attr dim
+#setw -g window-status-fg cyan
+#setw -g window-status-bg default
+#setw -g window-status-attr dim
+#setw -g window-status-current-fg cyan
+#setw -g window-status-current-bg default
+#setw -g window-status-current-attr dim
 set -g status-left-length 40
 set -g status-left "#[fg=green]Session: #S #[fg=yellow] #I #[fg=cyan]#P"
 set -g status-right "#[fg=cyan]%d/%b/%Y #(date +%H:%M:%S'')"
