--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,3 +53,6 @@ bind ^l resizep -R 2
 # Swap Windows
 bind ^u swapp -U
 bind ^d swapp -D
+
+# toggle synchronize on all panes
+bind -n ^y setw synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
