--- a/code/settings.json
+++ b/code/settings.json
@@ -1,10 +1,30 @@
 {
     "workbench.iconTheme": "vscode-icons",
-    "window.zoomLevel": 0,
+    "window.zoomLevel": -1,
     "python.linting.pylintEnabled": false,
     "python.linting.enabled": true,
     "editor.minimap.enabled": false,
-    "editor.fontSize": 18,
+    "editor.fontSize": 20,
     "workbench.colorTheme": "Monokai",
-    "python.linting.mypyEnabled": true
+    "python.linting.mypyEnabled": true,
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 10000,
+    "editor.fontWeight": "normal",
+    "diffEditor.codeLens": true,
+    "vsicons.dontShowNewVersionMessage": true,
+    "python.pythonPath": "/usr/bin/python3",
+    "workbench.activityBar.visible": false,
+    "editor.renderWhitespace": "all",
+    "breadcrumbs.enabled": true,
+    "remote.SSH.remotePlatform": {
+        "node": "linux",
+        "nick": "linux"
+    },
+    "remote.SSH.defaultForwardedPorts": [
+    
+    ],
+    "markdown.extension.math.enabled": false,
+    "workbench.sideBar.location": "left",
+    "editor.wordWrap": "on",
+    "window.menuBarVisibility": "toggle"
 }
